# semiauto-annotate

./: .gitattributes  .gitignore  .gitmodules  README.md  build.sh  setup.py  translate.py
Multi-Person_Pose_Estimation/: output.json  pose_detection.py
labelme/: __init__.py  app.py  application.py  conf.py  label_file.py  main.py  mainwindow.py  model.py  shape.py
labelme-cpp/: CMakeLists.txt  canvas.cpp  canvas.h  labeldialogbox.cpp  labeldialogbox.h  labeldialogbox.ui  labelme-cpp.pro  mainwindow.h  mainwindow.ui  shape.cpp  shape.h
labelme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
labelme/api/: __init__.py  image.py  imagelist.py  preprocess.py  preprocessed_image.py  upload.py
labelme/backend/: model_loader.py  pose_estm_parser.py  yolo_parser.py
labelme/cli/: draw_json.py
labelme/config/: __init__.py  default_config.yaml
labelme/custom_widgets/: __init__.py  custom_label_qlist.py  join_shapes_dialog.py  loading_dialog.py  pose_annotation.py  pose_annotation_dialog.py  preview_canvas.py
labelme/shape/: __init__.py  bezier.py  editing_shape.py  (+2 more)
labelme_base/: __init__.py
labelme_client/: __init__.py  application.py  logger.py  main.py  mainwindow.py  testing.py  uri.py
labelme_server/: __init__.py  conf.py
logistics/: notes.md  specs_ver0_0.docx
pose-estm/: .gitignore  README.md  config  pose_detection.py
pose_estm/: .gitignore  pose_detection.py
test/: test_mongodb.py
yolo/: .gitignore  train.py  train_bottleneck.py  yolo_class.py  yolo_video.py
yolo3/: .gitignore  README.md  output.json  yolo.py  yolo_video.py
(+70 files in other folders)
